--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "python.pythonPath": "/usr/local/opt/python@3.7/bin/python3"
+  "python.pythonPath": "/usr/local/opt/python@3.7/bin/python3",
+  "python.formatting.provider": "black"
 }
