--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ certifi==2020.12.5
 cloudinary==1.25.0
 confusable-homoglyphs==3.2.0
 Django==3.2.3
-django-bootstrap-v5==1.0.4
+django-bootstrap4==3.0.1
 django-registration==3.1.2
 django-tinymce==3.3.0
-importlib-metadata==3.10.1
+importlib-metadata==2.1.1
 psycopg2==2.8.6
 pytz==2021.1
 six==1.16.0
