--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-registration==3.1.2
 django-tinymce==3.3.0
 importlib-metadata==2.1.1
 psycopg2==2.8.6
+python-decouple==3.4
 pytz==2021.1
 six==1.16.0
 soupsieve==2.2.1
