--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "python.pythonPath": "/usr/local/opt/python@3.7/bin/python3",
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "html.format.enable": false
 }
