--- a/.env
+++ b/.env
@@ -3,3 +3,16 @@ EMAIL_HOST='smtp.gmail.com'
 EMAIL_PORT=587
 EMAIL_HOST_USER='wakarendek@gmail.com'
 EMAIL_HOST_PASSWORD='TestEmail'
+
+SECRET_KEY='django-insecure-gy33$xy$1%d3dgjnb7xg@*)+w=*3o38z@b71k+z^osu@gz%bz^'
+DEBUG=True
+DB_NAME='clone'
+DB_USER='joykirii'
+DB_PASSWORD='kirii'
+DB_HOST='127.0.0.1'
+MODE='prod'
+ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
+DISABLE_COLLECTSTATIC=1
+CLOUD_NAME='joykirii'
+API_KEY='856224545722866'
+API_SECRET='zwRThSjWRshRNjfDbfHRCblm4HI'
