--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ beautifulsoup4==4.9.3
 certifi==2020.12.5
 cloudinary==1.25.0
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==3.2.3
 django-bootstrap4==3.0.1
+django-heroku==0.3.1
 django-registration==3.1.2
 django-tinymce==3.3.0
+gunicorn==20.1.0
 importlib-metadata==2.1.1
 psycopg2==2.8.6
 python-decouple==3.4
@@ -16,4 +19,5 @@ soupsieve==2.2.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 urllib3==1.26.4
+whitenoise==5.2.0
 zipp==3.4.1
