--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_NAME='clone'
 DB_USER='joykirii'
 DB_PASSWORD='kirii'
 DB_HOST='127.0.0.1'
-MODE='dev'
+MODE='prod'
 ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
 CLOUD_NAME='joykirii'
