--- a/.env
+++ b/.env
@@ -5,12 +5,12 @@ EMAIL_HOST_USER='wakarendek@gmail.com'
 EMAIL_HOST_PASSWORD='TestEmail'
 
 SECRET_KEY='django-insecure-gy33$xy$1%d3dgjnb7xg@*)+w=*3o38z@b71k+z^osu@gz%bz^'
-DEBUG=True
+DEBUG=False
 DB_NAME='clone'
 DB_USER='joykirii'
 DB_PASSWORD='kirii'
 DB_HOST='127.0.0.1'
-MODE='dev'
+MODE='prod'
 ALLOWED_HOSTS='.localhost','.herokuapp.com','.127.0.0.1'
 DISABLE_COLLECTSTATIC=1
 CLOUD_NAME='joykirii'
